secondfile/objects/NewsArticleStaging__c.object
<CustomObject>
    <description>This object keeps the sorting information which will be used to render the articles in a specfic order.</description>
    <fields>
        <fullName>ArticlePosition__c</fullName>
        <description>Position of the Article in the Community and NewsRoom force.com site portal.</description>
        <label>ArticlePosition</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsVisibleInCSP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsVisibleInCSP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVisibleInPKB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsVisibleInPKB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVisibleInPrm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Required for Partner Community</description>
        <label>IsVisibleInPrm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Knowledge_Article_Id__c</fullName>
        <label>Knowledge Article Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>NewsArticleStaging</label>
    <nameField>
        <label>NewsArticleStaging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NewsArticleStagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>